--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,10 @@
 sonar.projectKey=de.sephiroth-j:node-dependency-track-upload
+sonar.projectName=node-dependency-track-upload
 sonar.links.issue=https://github.com/sephiroth-j/node-dependency-track-upload/issues
 sonar.links.scm=https://github.com/sephiroth-j/node-dependency-track-upload
 sonar.links.homepage=https://github.com/sephiroth-j/node-dependency-track-upload
 sonar.links.ci=https://travis-ci.com/sephiroth-j/node-dependency-track-upload
+sonar.sources=.
 sonar.tests=test
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
