--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.links.issue=https://github.com/sephiroth-j/node-dependency-track-upload/is
 sonar.links.scm=https://github.com/sephiroth-j/node-dependency-track-upload
 sonar.links.homepage=https://github.com/sephiroth-j/node-dependency-track-upload
 sonar.links.ci=https://travis-ci.com/sephiroth-j/node-dependency-track-upload
-sonar.sources=.
+sonar.sources=src
 sonar.tests=test
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
