update sonar settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=de.sephiroth-j:node-dependency-track-upload
 sonar.projectName=node-dependency-track-upload
+sonar.projectDescription=Node.js plugin to integrate with Dependency-Track server to submit dependency manifests and gather project metrics.
 sonar.links.issue=https://github.com/sephiroth-j/node-dependency-track-upload/issues
 sonar.links.scm=https://github.com/sephiroth-j/node-dependency-track-upload
 sonar.links.homepage=https://github.com/sephiroth-j/node-dependency-track-upload
