--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mocha": "^7.0.0",
     "mocha-unfunk-reporter": "^0.4.0",
     "nock": "^11.7.2",
-    "nyc": "^15.0.0"
+    "nyc": "^15.0.0",
+    "sinon": "^8.1.1"
   }
 }
