--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "cli-color": "^2.0.0",
     "npm-conf": "^1.1.3",
     "rxjs": "^6.5.4",
+    "semver": "^7.1.1",
     "table": "^5.4.6",
     "yargs": "^15.1.0"
   },
