--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sephiroth-j/node-dependency-track-upload",
-  "version": "0.1.0-beta",
+  "version": "0.1.1-beta",
   "description": "Node.js plugin to integrate with Dependency-Track server to submit dependency manifests and gather project metrics.",
   "main": "src/DTrackApi.js",
   "scripts": {
@@ -53,22 +53,22 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.19.1",
+    "axios": "^0.20.0",
     "axios-observable": "^1.1.3",
     "cli-color": "^2.0.0",
     "npm-conf": "^1.1.3",
-    "rxjs": "^6.5.4",
-    "semver": "^7.1.1",
+    "rxjs": "^6.6.2",
+    "semver": "^7.3.2",
     "table": "^5.4.6",
-    "yargs": "^15.1.0"
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
-    "@danmasta/mocha-sonar": "0.0.6",
+    "@danmasta/mocha-sonar": "^1.0.0",
     "chai": "^4.2.0",
-    "mocha": "^7.0.0",
+    "mocha": "^7.2.0",
     "mocha-unfunk-reporter": "^0.4.0",
-    "nock": "^11.7.2",
-    "nyc": "^15.0.0",
+    "nock": "^11.9.1",
+    "nyc": "^15.1.0",
     "sinon": "^8.1.1"
   }
 }
